--- a/gesassos/templates/partials/footer.html
+++ b/gesassos/templates/partials/footer.html
@@ -1,1 +1,7 @@
-<p>it is footer</p>
+<footer class="page-footer amber darken-1">
+  <div class="footer-copyright">
+    <div class="container">
+    Réalisé par le SiMDE avec <a class=" amber-text text-lighten-4" href="http://materializecss.com">Materialize</a> :)
+    </div>
+  </div>
+</footer>
