--- a/gesmail/templates/gesmail/index.html
+++ b/gesmail/templates/gesmail/index.html
@@ -1,10 +1,61 @@
 {% extends 'base.html' %}
 
+{% block page_name %}Gesmail{% endblock %}
+
 {% block content %}
-<h1>Plop</h1>
-{% if all %}
-    <p>Tout ça ?</p>
-{% else %}
-    <p>Ok</p>
-{% endif %}
+
+<h2 class="header amber-text text-darken-1">Gesmail</h1>
+<div class="row">
+  <h5 class="header col s12 light">Gestion des boites mail</h5>
+</div>
+<div class="row">
+<form action="#">
+  <div class="input-field">
+    <div class="row">
+      <div class="col s9">
+        <input type="text" id="autocomplete-input" class="autocomplete">
+        <label for="autocomplete-input">Rechercher un étudiant par son login ou son nom</label>
+      </div>
+      <div class="btn waves-effect waves-light amber darken-1 right">
+        <span>Rechercher</span>
+      </div>
+    </div>
+  </div>
+</form>
+</div>
+<ul class="collection">
+  <li class="collection-item avatar">
+    <i class="material-icons circle grey lighten-1">face</i>
+    <span class="title">Samy Nastuzzi</span>
+    <p class="grey-text text-lighten-1">snastuzz<br/>
+    Cotisant jusqu'au 31/08/2018 - mineur
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons amber-text darken-1">edit</i></a>
+  </li>
+  <li class="collection-item avatar">
+    <i class="material-icons circle grey lighten-1">face</i>
+    <span class="title">Paul Jenny</span>
+    <p class="grey-text text-lighten-1">jennypau<br/>
+    Cotisant jusqu'au 31/08/2018
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons amber-text darken-1">edit</i></a>
+  </li>
+  <li class="collection-item avatar">
+    <i class="material-icons circle grey lighten-1">face</i>
+    <span class="title">César Richard</span>
+    <p class="grey-text text-lighten-1">licorne<br/>
+    Cotisant jusqu'au 31/08/2918
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons amber-text darken-1">edit</i></a>
+  </li>
+  <li class="collection-item avatar">
+    <i class="material-icons circle grey lighten-1">face</i>
+    <span class="title">Mewen Michel</span>
+    <p class="grey-text text-lighten-1">michelme<br/>
+    Cotisant jusqu'au 31/08/2018
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons amber-text darken-1">edit</i></a>
+  </li>
+</ul>
+
 {% endblock %}
