--- a/gesassos/templates/partials/footer.html
+++ b/gesassos/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer amber darken-1">
+<footer class="page-footer amber">
   <div class="footer-copyright">
     <div class="container">
     Réalisé par le SiMDE avec <a class=" amber-text text-lighten-4" href="http://materializecss.com">Materialize</a> :)
