--- a/ginger/templates/ginger/api.html
+++ b/ginger/templates/ginger/api.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block page_name %}Gesmail{% endblock %}
+{% block page_name %}Clés d'API Ginger{% endblock %}
 
 {% block content %}
 
-<h2 class="header amber-text text-darken-1">Gesmail</h1>
+<h2 class="header amber-text">Ginger</h1>
 <div class="row">
-  <h5 class="header col s12 light">Gestion des boites mail</h5>
+  <h5 class="header col s12 light">Gestion des clés d'API</h5>
 </div>
 <div class="row">
 <form action="#">
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col s9">
         <input type="text" id="autocomplete-input" class="autocomplete">
-        <label for="autocomplete-input">Rechercher une adresse mail</label>
+        <label for="autocomplete-input">Rechercher une clé par nom ou par description</label>
       </div>
       <div class="btn waves-effect waves-light amber right">
         <span>Rechercher</span>
@@ -26,14 +26,18 @@
 <ul class="collection">
   <li class="collection-item avatar">
     <i class="material-icons circle grey lighten-1">face</i>
-    <span class="title">SiMDE - Principale</span>
-    <p class="grey-text text-lighten-1">simde@assos.utc.fr</p>
+    <span class="title">Emploi d'UT'emps</span>
+    <p class="grey-text text-lighten-1">e4da53f4b0c64d01e4da53f4b0c64d01<br/>
+    On sait pas trop pour quoi faire, le gars sait même pas générer une clé SSH...
+    </p>
     <a href="#!" class="secondary-content"><i class="material-icons amber-text">edit</i></a>
   </li>
   <li class="collection-item avatar">
     <i class="material-icons circle grey lighten-1">face</i>
-    <span class="title">SiMDE - Woolly</span>
-    <p class="grey-text text-lighten-1">simde-woolly@assos.utc.fr</p>
+    <span class="title">Gesassos-web</span>
+    <p class="grey-text text-lighten-1">vdsf15gvb5df4bb4v4fd8v4t8ert1b8f<br/>
+    #recursion
+    </p>
     <a href="#!" class="secondary-content"><i class="material-icons amber-text">edit</i></a>
   </li>
 </ul>
