--- a/gesassos/templates/gesassos/index.html
+++ b/gesassos/templates/gesassos/index.html
@@ -5,12 +5,12 @@
 {% block content %}
 
 <br><br>
-<h1 class="header center amber-text  text-darken-1">Gesassos web</h1>
+<h1 class="header center amber-text">Gesassos web</h1>
 <div class="row center">
 <h5 class="header col s12 light">Bienvenue !<br/>Connectez-vous pour accéder à la gestion des assos</h5>
 </div>
 <div class="row center">
-<a href="{% url 'authentication:login' %}" id="download-button" class="btn-large waves-effect waves-light amber darken-1">Se connecter avec le CAS</a>
+<a href="{% url 'authentication:login' %}" id="download-button" class="btn-large waves-effect waves-light amber">Se connecter avec le CAS</a>
 </div>
 <br><br>
 <!-- <h1>Plop</h1>
