Adds portal rights v0.1, rights check works

--- a/gesassos/static/gesassos/css/style.css
+++ b/gesassos/static/gesassos/css/style.css
@@ -95,3 +95,7 @@ ul.side-nav.fixed li.logo:hover, ul.side-nav.fixed li.logo #logo-container:hover
 	    width: 85%;
 	}
 }
+
+.right {
+	float: right;
+}
