--- a/gesassos/templates/partials/head.html
+++ b/gesassos/templates/partials/head.html
@@ -5,6 +5,6 @@
   <title>Gesassos</title>
 
   <!-- CSS  -->
-  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="{% static "gesassos/css/materialize.css" %}" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="{% static "gesassos/css/style.css" %}" type="text/css" rel="stylesheet" media="screen,projection"/>
