--- a/gesassos/templates/base.html
+++ b/gesassos/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load groups %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +11,17 @@
   <nav class="top-nav amber">
     <div class="container">
       <a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only"><i class="material-icons">menu</i></a>
-      <div class="nav-wrapper"><a class="page-title">Gesassos | {{ app_name|capfirst }}</a></div>
-      <div class="nav-wrapper"><a class="page-title">{{ username|capfirst }}</a></div>
+      <div class="nav-wrapper">
+        <a class="page-title">Gesassos | {{ app_name|capfirst }}</a>
+        <div class="right">
+          {% if user.is_authenticated %}
+          {{ user.first_name|capfirst }} {{ user.last_name|capfirst }}
+          <a href="{% url 'authentication:logout' %}" class="waves-effect waves-teal"><i class="material-icons">cancel</i></a>
+          {% else %}
+          <a href="{% url 'authentication:login' %}" class="waves-effect waves-teal">Se connecter</a>
+          {% endif %}
+        </div>
+      </div>
     </div>
   </nav>
   <ul id="nav-mobile" class="side-nav fixed">
@@ -27,13 +37,16 @@
         Accueil
       </a>
     </li>
+    {% if request.user|has_group_in:"bde,simde,bureau,geek" %} 
     <li class="no-padding">
       <ul class="collapsible collapsible-accordion">
         <li class="bold{% if app_name == "ginger" %} active{% endif %}">
           <a class="collapsible-header waves-effect waves-teal{% if app_name == "ginger" %} active{% endif %}">Ginger</a>
           <div class="collapsible-body">
             <ul>
+              {% if request.user|has_group_in:"bde,simde" %} 
               <li class="{% if view_name == "contributors" %} active{% endif %}"><a href="{% url 'ginger:contributors' %}">Cotisants</a></li>
+              {% endif %}
               <li class="{% if view_name == "api_keys" %} active{% endif %}"><a href="{% url 'ginger:api_keys' %}">Clés d'API</a></li>
             </ul>
           </div>
@@ -49,10 +62,9 @@
           </a>
         </li>
         <!-- <li class="bold"><a class="waves-effect waves-teal">Portail</a></li> -->
-        <li class="bold"><a href="{% url 'authentication:login' %}" class="waves-effect waves-teal">Se connecter</a></li>
-        <li class="bold"><a href="{% url 'authentication:logout' %}" class="waves-effect waves-teal">Se déconnecter</a></li>
       </ul>
     </li>
+    {% endif %}
   </ul>
 </header>
 
@@ -77,7 +89,8 @@
 
 
 <!--  Scripts-->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
+<script src="{% static "gesassos/js/jquery-2.1.4.tmp.min.js" %}"></script>
 <script src="{% static "gesassos/js/materialize.js" %}"></script>
 <script src="{% static "gesassos/js/init.js" %}"></script>
 
