--- a/gesassos/static/gesassos/css/style.css
+++ b/gesassos/static/gesassos/css/style.css
@@ -99,3 +99,70 @@ ul.side-nav.fixed li.logo:hover, ul.side-nav.fixed li.logo #logo-container:hover
 .right {
 	float: right;
 }
+
+
+
+li.collection-item.expandable {
+	transition: all 0.3s ease-in-out;
+	width: 100%;
+	left: 0%;
+	margin: 0em;
+}
+
+li.collection-item.expanded {
+	margin-top: 1em;
+	margin-bottom: 1em;
+	left: -5%;
+	width: 110%;
+	border: 1px solid #e0e0e0;
+	box-shadow: 0px 5px 10px #e0e0e0;
+}
+
+ul.collection {
+	overflow: visible;
+}
+
+li.collection-item.expandable > div {
+	overflow: hidden;
+	display: none;
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+
+.new-form {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0.5,0.5,0.5,0.1);
+	z-index: 1000;
+	text-align: center;
+	display: flex;
+	overflow: auto;
+	padding-top: 2em;
+	opacity: 0.01;
+}
+
+.new-form > .container {
+	margin: auto;
+}
+
+.onlycol {
+	float: none !important; /* center */
+	margin: auto;
+}
+
+
+@media screen and (min-width: 961px) {
+	.new-form-container {
+		margin: auto;
+		padding: 1em 4em;
+		max-height: 96%;
+		position: relative;
+		background: #fff;
+		box-shadow: 0px 5px 5px rgba(0,0,0,0.5);
+		border-radius: 0.3em;
+		overflow: hidden;
+	}
+}
