--- a/gesassos/templates/base.html
+++ b/gesassos/templates/base.html
@@ -83,6 +83,21 @@
   </div>
 </main>
 
+<div class="new-form">
+  <div class="container">
+    <div class="row">
+      <div class="col s6 onlycol">
+        <div class="new-form-container">
+          <div class="row">
+            {% block new-form %}
+            {% endblock %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% include 'partials/footer.html' %}
 
 </div>
