--- a/gesassos/templates/base.html
+++ b/gesassos/templates/base.html
@@ -14,6 +14,9 @@
       <div class="nav-wrapper">
         <a class="page-title">Gesassos | {{ app_name|capfirst }}</a>
         <div class="right">
+          {% if messages %}
+          <a href="#" id="toggleMessages" class="waves-effect waves-teal"><i class="material-icons">sms</i></a>
+          {% endif %}
           {% if user.is_authenticated %}
           {{ user.first_name|capfirst }} {{ user.last_name|capfirst }}
           <a href="{% url 'authentication:logout' %}" class="waves-effect waves-teal"><i class="material-icons">cancel</i></a>
@@ -100,8 +103,13 @@
 
 {% include 'partials/footer.html' %}
 
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+    {% endfor %}
 </div>
-
+{% endif %}
 
 <!--  Scripts-->
 <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
