Bunch of new features for Ginger API key management
* Deal with errors in form
* Key renewal now possible
* Asso list works in new form
* Key filter and autocomplete work
* Edit button created but not working
TODO:
* edit key
* use actual asso list of the user, not a hack

--- a/gesassos/static/gesassos/css/style.css
+++ b/gesassos/static/gesassos/css/style.css
@@ -96,8 +96,8 @@ ul.side-nav.fixed li.logo:hover, ul.side-nav.fixed li.logo #logo-container:hover
 	}
 }
 
-.right {
-	float: right;
+.align-right {
+	text-align: right;
 }
 
 
@@ -221,4 +221,13 @@ body {
 
 .messages .warning {
 	background: #ff9800;
+}
+
+.errorlist li {
+	color: #b71c1c;
+}
+
+/* The following revert a law of Materialize because it works bad with select fields */
+select {
+    display: block;
 }
