Deal with errors, refactor Ginger, clean/solve TODOs
Fix a JS bug also

--- a/gesassos/templates/base.html
+++ b/gesassos/templates/base.html
@@ -31,7 +31,6 @@
     <li class="logo">
       <a id="logo-container" href="{% url 'index' %}" class="brand-logo">
         <img id="front-page-logo" src="{% static "images/logo.png" %}" alt="SiMDE"/>
-        <!-- <object id="front-page-logo" type="image/svg+xml" data="res/materialize.svg">TODO: LOGO</object> -->
       </a>
     </li>
 
@@ -113,8 +112,7 @@
 {% endif %}
 
 <!--  Scripts-->
-<!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
-<script src="{% static "gesassos/js/jquery-2.1.4.tmp.min.js" %}"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="{% static "gesassos/js/materialize.js" %}"></script>
 <script src="{% static "gesassos/js/init.js" %}"></script>
 
