--- a/ginger/templates/ginger/api.html
+++ b/ginger/templates/ginger/api.html
@@ -36,7 +36,7 @@
 <ul class="collection">
   {% for key in keys %}
     <li class="collection-item expandable avatar">
-      <i class="material-icons circle grey lighten-1">face</i>
+      <i class="material-icons circle grey lighten-1">vpn_key</i>
       <span class="title">{{ key.login }}</span>
       <p class="grey-text text-lighten-1">{{ key.key }}<br/>
       {{ key.description }}
