--- a/ginger/templates/ginger/contributors.html
+++ b/ginger/templates/ginger/contributors.html
@@ -9,21 +9,41 @@
   <h5 class="header col s12 light">Gestion des cotisants</h5>
 </div>
 <div class="row">
-<form action="#">
+<form action="" method="GET">
   <div class="input-field">
     <div class="row">
       <div class="col s9">
-        <input type="text" id="autocomplete-input" class="autocomplete">
-        <label for="autocomplete-input">Rechercher un étudiant par son login ou son nom</label>
+        <input type="text" id="autocomplete-input" name="s" class="autocomplete" {% if search %}value="{{search}}"{% endif %}>
+        <label for="autocomplete-input">Rechercher un étudiant</label>
       </div>
-      <div class="btn waves-effect waves-light amber right">
-        <span>Rechercher</span>
-      </div>
+      <button class="btn waves-effect waves-light amber right" type="submit">Rechercher
+        <i class="material-icons right">search</i>
+      </button>
     </div>
   </div>
 </form>
 </div>
-<ul class="collection">
+<div class="row">
+  {% if contributors %}
+  <ul class="collection">
+    {% for contributor in contributors %}
+      <li class="collection-item avatar">
+        <i class="material-icons circle grey lighten-1">face</i>
+        <span class="title">{{ contributor.firstname }} {{ contributor.lastname }}</span>
+        <p class="grey-text text-lighten-1">{{ contributor.login }}<br/>
+          {{ contributor.type }} • {{ contributor.badge }} • {{ contributor.email }} • {% if contributor.isAdult %}majeur{% else %}mineur{% endif %}
+        </p>
+        <a href="#!" class="secondary-content"><i class="material-icons amber-text">edit</i></a>
+      </li>
+    {% endfor %}
+  </ul>
+  {% elif search %}
+  <p><i>{{ search }}</i> ne donne aucun résultat...</p>
+  {% else %}
+  <p>Vous pouvez rechercher un étudiant par son nom, prénom, adresse mail, login ou identifiant de badge.</p>
+  {% endif %}
+</div>
+<!-- <ul class="collection">
   <li class="collection-item avatar">
     <i class="material-icons circle grey lighten-1">face</i>
     <span class="title">Samy Nastuzzi</span>
@@ -56,6 +76,6 @@
     </p>
     <a href="#!" class="secondary-content"><i class="material-icons amber-text">edit</i></a>
   </li>
-</ul>
+</ul> -->
 
 {% endblock %}
